3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Win32 compilation fixes.
 include/win32.h: #define sleep.
 plugins/cfanim/include/cfanim_proto.h: missing CF_PLUGIN.
Nicolas Weeger 2008-01-03

Fix variable being used while not initialized.
 server/player.c
Nicolas Weeger 2007-12-28

Merge documentation change from wiki.
 doc/Developers/objects
Kevin Bulgrien 2007-12-28

Fix variable being used while not initialized.
 server/player.c
Nicolas Weeger 2007-12-28

No functional change, reformat object types defines for export to wiki page.
  include/define.h
Kevin Bulgrien 2007-12-27

Fix spurious errors in log from plugins.
 common/arch.c: new function try_find_archetype().
 include/libproto.h: new prototype.
 server/plugins.c: replace find_archetype() by try_find_archetype().
Nicolas Weeger 2007-12-27

plugins/cfpython/cfpython.c: fix invalid options when empty parameter.
Nicolas Weeger 2007-12-26

Add support for user-defined events. Those can be called from the Python plugin.
    server/plugins.c
    plugins/common/include/plugin_common.h
    plugins/common/plugin_common.c
    plugins/cfpython/cfpython_object.c
    plugins/cfpython/include/cfpython_object_private.h
    plugins/cfpython/cfpython.c
    include/sproto.h
    include/plugin.h
Yann Chachkoff (gros) 2007-12-23

Add error information to CrossfireMap.TriggerConnected, make magice_ear scriptable
    server/monster.c
    plugins/cfpython/cfpython_map.c
Tchize 2007-12-22

Change skill animation to use anim_suffix instead of the name.
 server/skill_util.c
Nicolas Weeger 2007-12-21

Fix missing animation first pic. Change animate_object to not alter the state,