@@ -16,6 +16,11 @@ else.  With this, include the file(s) that you changed.
 Changes for SVN:
 
 Win32 compilation fixes.
+ plugins/cfpython/include/cfpython_proto.h: missing CF_PLUGIN.
+ plugins/cfpython/cjson.c: variable order.
+Nicolas Weeger 2008-01-03
+
+Win32 compilation fixes.
  include/win32.h: #define sleep.
  plugins/cfanim/include/cfanim_proto.h: missing CF_PLUGIN.
 Nicolas Weeger 2008-01-03
